<resources>
    <string name="app_name">Boltie</string>
    <string name="login">Bejelentkezés</string>
    <string name="workplace_name">Munkahely neve</string>
    <string name="sale">Eladás</string>
    <string name="restock">Betárazás</string>
    <string name="waste">Selejt</string>
    <string name="buy_back">Visszáru</string>
    <string name="see_stock">Árukészlet megtekintése</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checked_so_far">Eddig beolvasott termékek</string>
    <string name="title_activity_login_compose">LoginActivityCompose</string>
    <string name="txt_user_name">Felhasználónév</string>
    <string name="txt_password">Jelszó</string>
    <string name="title_activity_function_selector_compose">FunctionSelectorActivityCompose</string>
    <string name="greeting">Üdvözlünk, %1$s!</string>
    <string name="fn_select">Funkcióválasztás</string>
    <string name="title_activity_barcode_compose">BarcodeActivityCompose</string>
    <string name="no_camera_permission">Az alkalmazás nem kapott engedélyt a kamerához való hozzáféréshez, így nem tud működni.</string>
    <string name="select_workplace">Munkahely kiválasztása</string>
    <string name="title_activity_barcode_compose2">BarcodeActivityCompose2</string>
</resources>