<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctionSelectActivity">

    <TextView
        android:id="@+id/tvPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/workplace_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlaceName">

        <Button
            android:id="@+id/btnSell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            tools:text="@string/sale" />

        <Button
            android:id="@+id/btnRestock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/restock" />

        <Button
            android:id="@+id/btnWaste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/waste" />

        <Button
            android:id="@+id/btnBuyBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/buy_back" />

        <Button
            android:id="@+id/btnSeeStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/see_stock" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>